--- a/index.html
+++ b/index.html
@@ -30,8 +30,15 @@
         </div>
     </div>
     <div class="section-two">
-        test
+        <h1>some random information.</h1>
+        <div class="card-container">
+            <div class="card"><div class="card-image"></div>this is some subtext under a image or illustarion</div>
+            <div class="card"><div class="card-image"></div>this is some subtext under a image or illustarion</div>
+            <div class="card"><div class="card-image"></div>this is some subtext under a image or illustarion</div>
+            <div class="card"><div class="card-image"></div>this is some subtext under a image or illustarion</div>
+        </div>
     </div>
+    <div class="footer">Copyright TristonSquad 2024</div>
 </body>
 
 </html>
