--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             <div class="card"><div class="card-image"></div>this is some subtext under a image or illustarion</div>
         </div>
     </div>
+    <div class="section-three">
+        <div class="quote"> <i>Bro can you just fucking grab your god damn brain, Maybe just give it a quick jiggle before you start saying stupid stuff</i> - Summit1g</div>
+    </div>
     <div class="footer">Copyright TristonSquad 2024</div>
 </body>
 
