--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
     <div class="section-three">
         <div class="quote"> <i>Bro can you just fucking grab your god damn brain, Maybe just give it a quick jiggle before you start saying stupid stuff</i> - Summit1g</div>
     </div>
-    <div class="footer">Copyright TristonSquad 2024</div>
+    <div class="section-four">
+        <div class="call-to-action">
+            <div class="text"><h2>Call to action! It's time!</h1><p>sign up for our product by clicking that button!</p></div>
+            <div><button>Sign up</button></div>
+        </div>
+    </div>
+    <div class="footer">Copyright &#169 TristonSquad 2024</div>
 </body>
 
 </html>
